--- a/package.json
+++ b/package.json
@@ -51,8 +51,11 @@
     "@types/mssql": "^8.1.1",
     "@types/node": "^18.7.23",
     "@vitejs/plugin-vue": "^3.1.0",
+    "autoprefixer": "^10.4.13",
     "nodemon": "^2.0.20",
+    "postcss": "^8.4.21",
     "sass": "^1.55.0",
+    "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
     "vite": "^3.1.0",
