--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@prisma/client": "^4.9.0",
+    "@zxing/browser": "^0.1.1",
     "@zxing/library": "^0.19.1",
     "async-mqtt": "^2.6.3",
     "axios": "^0.27.2",
