--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "moment": "^2.29.4",
     "pinia": "^2.0.0-rc.10",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
