--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "npm run dev:frontend && npm run dev:server",
     "pm": "dotenv -e .env -- npx prisma migrate dev",
     "dev:frontend": "vite ./frontend",
-    "dev:server": "nodemon ./server/index.ts",
+    "dev:server": "chcp 65001 && nodemon ./server/index.ts | pino-pretty",
     "build": "npm i && npm run build:frontend && npm run build:server && docker build . -t energyapp",
     "build:frontend": "vue-tsc -p ./frontend/tsconfig.json --noEmit && vite build ./frontend --emptyOutDir",
     "build:server": "npx tsc -p ./server/tsconfig.json",
@@ -26,6 +26,7 @@
     "express": "^4.18.1",
     "moment": "^2.29.4",
     "pinia": "^2.0.0-rc.10",
+    "pino": "^8.10.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
@@ -37,6 +38,7 @@
     "autoprefixer": "^10.4.13",
     "dotenv-cli": "^7.0.0",
     "nodemon": "^2.0.20",
+    "pino-pretty": "^9.3.0",
     "postcss": "^8.4.21",
     "sass": "^1.55.0",
     "tailwindcss": "^3.2.4",
