--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,12 @@
 events { }
 http {
-
+    access_log /dev/stdout;
     server {
         listen 80;
         server_name localhost;
 
         location /api {
-            proxy_pass http://api:5000;
+            proxy_pass http://server:8080;
             proxy_set_header X-Real-IP  $remote_addr;
             proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header Host $host;
@@ -18,7 +18,7 @@ http {
 
         location / {
             include /etc/nginx/mime.types;
-            root /app/;
+            root /app/frontend/;
             try_files $uri $uri/ /index.html;
         }
    }
