--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "energy-ts",
+  "name": "fridgy",
   "private": true,
   "version": "0.0.0",
   "exports": "./dist/index.js",
@@ -11,40 +11,43 @@
     "pm": "dotenv -e .env -- npx prisma migrate dev",
     "dev:frontend": "vite ./frontend",
     "dev:server": "chcp 65001 && nodemon ./server/index.ts | pino-pretty",
-    "build": "npm i && npm run build:frontend && npm run build:server && docker build . -t energyapp",
+    "build": "npm i && npm run build:frontend && npm run build:server",
     "build:frontend": "vue-tsc -p ./frontend/tsconfig.json --noEmit && vite build ./frontend --emptyOutDir",
     "build:server": "npx tsc -p ./server/tsconfig.json",
+    "build:docker": "docker build -f Dockerfile.Frontend -t fridgy/frontend . && docker build -f Dockerfile.Server -t fridgy/server .",
+    "prisma:deploy": "dotenv -e .env -- npx prisma migrate deploy",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@prisma/client": "^4.9.0",
+    "@prisma/client": "^4.10.1",
     "@zxing/browser": "^0.1.1",
-    "@zxing/library": "^0.19.1",
+    "@zxing/library": "^0.19.2",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
-    "pinia": "^2.0.0-rc.10",
+    "pinia": "^2.0.31",
     "pino": "^8.10.0",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.5"
+    "prisma": "^4.10.1",
+    "dotenv-cli": "^7.0.0"
   },
   "devDependencies": {
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.6",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.7.23",
-    "@vitejs/plugin-vue": "^3.1.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.0",
+    "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
-    "dotenv-cli": "^7.0.0",
     "nodemon": "^2.0.20",
     "pino-pretty": "^9.3.0",
     "postcss": "^8.4.21",
-    "sass": "^1.55.0",
-    "tailwindcss": "^3.2.4",
+    "sass": "^1.58.3",
+    "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.0",
-    "vue-tsc": "^0.40.4"
+    "typescript": "^4.9.5",
+    "vite": "^3.2.5",
+    "vue-tsc": "^0.40.13"
   }
 }
