--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,7 +14,7 @@
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true
   },
-  "include": ["./**/*.ts", "./index.d.ts" ,"./**/*.d.ts", "./**/*.tsx", "../**/*.ts"],
+  "include": ["./**/*.ts", "./index.d.ts" ,"./**/*.d.ts", "./**/*.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
 
