--- a/Dockerfile.Frontend
+++ b/Dockerfile.Frontend
@@ -13,7 +13,7 @@ FROM nginx:1.23.3-alpine-slim as target
 
 WORKDIR /app
 
-COPY --from=builder /builder/dist /app
+COPY --from=builder /builder/dist /app/
 COPY ./nginx.conf /etc/nginx/nginx.conf
 
 ENV LOG_ENABLED=true
