--- a/package.json
+++ b/package.json
@@ -25,21 +25,20 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.0.0",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "pinia": "^2.0.31",
     "pino": "^8.10.0",
-    "prisma": "^4.10.1",
-    "dotenv-cli": "^7.0.0"
+    "prisma": "^4.10.1"
   },
   "devDependencies": {
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.6",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
+    "lucide-vue-next": "^0.115.0",
     "nodemon": "^2.0.20",
     "pino-pretty": "^9.3.0",
     "postcss": "^8.4.21",
@@ -48,6 +47,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "vite": "^3.2.5",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.6",
     "vue-tsc": "^0.40.13"
   }
 }
