--- a/package.json
+++ b/package.json
@@ -19,37 +19,37 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@prisma/client": "4.10.1",
-    "@zxing/browser": "0.1.1",
-    "@zxing/library": "0.19.2",
-    "axios": "0.27.2",
-    "cors": "2.8.5",
-    "dotenv": "16.0.3",
-    "dotenv-cli": "7.0.0",
-    "express": "4.18.2",
-    "moment": "2.29.4",
-    "pino": "8.10.0",
-    "prisma": "4.10.1"
+    "@prisma/client": "^4.12.0",
+    "@zxing/browser": "^0.1.1",
+    "@zxing/library": "^0.19.2",
+    "axios": "^1.3.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.2.1",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "pino": "^8.11.0",
+    "prisma": "^4.12.0"
   },
   "devDependencies": {
-    "@types/cors": "2.8.13",
-    "@types/express": "4.17.17",
-    "@types/node": "18.14.0",
-    "@vitejs/plugin-vue": "3.2.0",
-    "autoprefixer": "10.4.13",
-    "lucide-vue-next": "0.115.0",
-    "nodemon": "2.0.20",
-    "pinia": "2.0.32",
-    "pinia-plugin-persist": "1.0.0",
-    "pino-pretty": "9.3.0",
-    "postcss": "8.4.21",
-    "sass": "1.58.3",
-    "tailwindcss": "3.2.7",
-    "ts-node": "10.9.1",
-    "typescript": "4.9.5",
-    "vite": "3.2.5",
-    "vue": "3.2.37",
-    "vue-router": "4.1.6",
-    "vue-tsc": "0.40.13"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "autoprefixer": "^10.4.14",
+    "lucide-vue-next": "^0.137.0",
+    "nodemon": "^2.0.22",
+    "pinia": "^2.0.34",
+    "pinia-plugin-persist": "^1.0.0",
+    "pino-pretty": "^10.0.0",
+    "postcss": "^8.4.21",
+    "sass": "^1.61.0",
+    "tailwindcss": "^3.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
+    "vite": "^4.2.1",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vue-tsc": "^1.2.0"
   }
 }
