--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "pm": "dotenv -e .env -- npx prisma migrate dev && prisma generate",
     "dev:frontend": "vite ./frontend",
     "dev:server": "chcp 65001 && nodemon ./server/index.ts | pino-pretty",
-    "build": "npm i && npm run build:frontend && npm run build:server",
+    "build": "npm run build:frontend && npm run build:server",
     "build:frontend": "vue-tsc -p ./frontend/tsconfig.json --noEmit && vite build ./frontend --emptyOutDir",
     "build:server": "npx tsc -p ./server/tsconfig.json",
     "build:docker": "docker build -f Dockerfile.Frontend -t fridgy/frontend . && docker build -f Dockerfile.Server -t fridgy/server .",
     "prisma:deploy": "dotenv -e .env -- npx prisma migrate deploy",
-    "preview": "vite preview"
+    "preview": "npm run build && dotenv -v NODE_ENV=production -- node ./dist/server.js"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
@@ -46,6 +46,7 @@
     "sass": "^1.61.0",
     "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
+    "ts-to-json": "^1.7.3",
     "typescript": "^5.0.4",
     "vite": "^4.2.1",
     "vue": "^3.2.47",
