--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "@vueuse/core": "^10.1.0",
     "@zxing/browser": "^0.1.1",
     "@zxing/library": "^0.19.2",
     "axios": "^1.3.5",
