--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lucide-vue-next": "^0.137.0",
     "nodemon": "^2.0.22",
     "pinia": "^2.0.34",
-    "pinia-plugin-persist": "^1.0.0",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "pino-pretty": "^10.0.0",
     "postcss": "^8.4.21",
     "sass": "^1.61.0",
