--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,7 +17,7 @@
         "vite/client"
       ]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "frontend/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "frontend/**/*.ts", "../**/*.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
 
