--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "dev": "npm run dev:frontend && npm run dev:server",
     "pm": "dotenv -e .env -- npx prisma migrate dev && prisma generate",
     "dev:frontend": "vite ./frontend",
-    "dev:server": "chcp 65001 && nodemon ./server/index.ts | pino-pretty",
+    "dev:server": "nodemon ./server/index.ts | pino-pretty",
     "build": "npm run build:frontend && npm run build:server",
     "build:frontend": "vue-tsc -p ./frontend/tsconfig.json --noEmit && vite build ./frontend --emptyOutDir",
     "build:server": "npx tsc -p ./server/tsconfig.json",
     "build:docker": "docker build -f Dockerfile.Frontend -t fridgy/frontend . && docker build -f Dockerfile.Server -t fridgy/server .",
     "prisma:deploy": "dotenv -e .env -- npx prisma migrate deploy",
+    "prisma:generate": "prisma generate",
     "preview": "npm run build && dotenv -v NODE_ENV=production -- node ./dist/server.js"
   },
   "dependencies": {
@@ -30,7 +31,7 @@
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "pino": "^8.11.0",
-    "prisma": "^4.12.0"
+    "prisma": "^5.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
